http-echo/http-echo-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-app-gateway
spec:
  parentRefs:
    - name: k8s-playground-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /dev-app
      backendRefs:
        - name: dev-app-service
          port: 80
