http-echo/http-echo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-app
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: dev-app
  # namespace: hello-app
  labels:
    app: dev-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-app
  template:
    metadata:
      labels:
        app: dev-app
    spec:
      containers:
      - name: dev-app
        image: hashicorp/http-echo
        args:
          - "-text=DevApp playgroud."
        ports:
        - containerPort: 5678
---
kind: Service
apiVersion: v1
metadata:
  name: dev-app-service
  # namespace: hello-app
spec:
  selector:
    app: dev-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ops-app
  # namespace: hello-app
  labels:
    app: ops-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ops-app
  template:
    metadata:
      labels:
        app: ops-app
    spec:
      containers:
      - name: ops-app
        image: hashicorp/http-echo
        args:
          - "-text=OpsApp playgroud."
        ports:
        - containerPort: 5678
---
kind: Service
apiVersion: v1
metadata:
  name: ops-app-service
  # namespace: hello-app
spec:
  selector:
    app: ops-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-app-gateway
spec:
  parentRefs:
    - name: k8s-playground-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /dev-app
      backendRefs:
        - name: dev-app-service
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /ops-app
      backendRefs:
        - name: ops-app-service
          port: 80
